--- a/imgui.ini
+++ b/imgui.ini
@@ -18,3 +18,13 @@ Pos=60,60
 Size=208,85
 Collapsed=0
 
+[Window][camera]
+Pos=60,60
+Size=103,77
+Collapsed=0
+
+[Window][Particle]
+Pos=60,60
+Size=108,54
+Collapsed=0
+
