--- a/imgui.ini
+++ b/imgui.ini
@@ -13,9 +13,9 @@ Pos=60,60
 Size=32,35
 Collapsed=0
 
-[Window][Player]
+[Window][tex]
 Pos=60,60
-Size=263,86
+Size=208,85
 Collapsed=0
 
 [Window][camera]
