タイトルだけ作った

--- a/CG2_DirectX.vcxproj
+++ b/CG2_DirectX.vcxproj
@@ -139,6 +139,7 @@ copy "$(WindowsSdkdir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\Transform\WorldTransform.cpp" />
     <ClCompile Include="Engine\TextureManager\TextureReference\TextureReference.cpp" />
     <ClCompile Include="Project\Scene\IScene\IScene.cpp" />
+    <ClCompile Include="Project\Scene\TitleScene\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Audio\Audio.h" />
@@ -179,6 +180,7 @@ copy "$(WindowsSdkdir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Transform\WorldTransform.h" />
     <ClInclude Include="Engine\TextureManager\TextureReference\TextureReference.h" />
     <ClInclude Include="Project\Scene\IScene\IScene.h" />
+    <ClInclude Include="Project\Scene\TitleScene\TitleScene.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\ShaderFile\Object3d.hlsli">
