--- a/imgui.ini
+++ b/imgui.ini
@@ -28,3 +28,13 @@ Pos=60,60
 Size=108,54
 Collapsed=0
 
+[Window][SceneChange]
+Pos=60,60
+Size=125,55
+Collapsed=0
+
+[Window][Scene]
+Pos=60,60
+Size=134,62
+Collapsed=0
+
