--- a/CG2_DirectX.vcxproj.filters
+++ b/CG2_DirectX.vcxproj.filters
@@ -169,6 +169,9 @@
     <ClCompile Include="Project\Scene\TitleScene\TitleScene.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Project\Scene\SelectScene\SelectScene.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\CreateResource\CreateResource.h">
@@ -278,6 +281,7 @@
     <ClInclude Include="Engine\Audio\Audio.h" />
     <ClInclude Include="Engine\ParticleSystem\ParticleSystem.h" />
     <ClInclude Include="Project\Scene\TitleScene\TitleScene.h" />
+    <ClInclude Include="Project\Scene\SelectScene\SelectScene.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Engine\ShaderFile\Object3d.PS.hlsl">
