--- a/imgui.ini
+++ b/imgui.ini
@@ -39,12 +39,12 @@ Size=121,48
 Collapsed=0
 
 [Window][Enemy HP]
-Pos=61,129
-Size=105,50
+Pos=61,119
+Size=105,60
 Collapsed=0
 
 [Window][Attack]
-Pos=60,60
+Pos=281,38
 Size=130,67
 Collapsed=0
 
@@ -76,5 +76,15 @@ Collapsed=0
 [Window][stageSlect]
 Pos=30,104
 Size=155,108
+Collapsed=0
+
+[Window][particleFlag]
+Pos=42,282
+Size=131,65
+Collapsed=0
+
+[Window][a]
+Pos=60,27
+Size=153,86
 Collapsed=0
 
