--- a/CG2_DirectX.vcxproj.filters
+++ b/CG2_DirectX.vcxproj.filters
@@ -7,113 +7,10 @@
     <FxCompile Include="Engine\ShaderFile\Particle.VS.hlsl" />
     <FxCompile Include="Engine\ShaderFile\Sprite2D.PS.hlsl" />
     <FxCompile Include="Engine\ShaderFile\Sprite2D.VS.hlsl" />
+    <FxCompile Include="Engine\ShaderFile\PointLight.VS.hlsl" />
+    <FxCompile Include="Engine\ShaderFile\PointLight.PS.hlsl" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="Project\Scene\GameScene\GameScene.cpp">
-      <Filter>Project\GameScene</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Math\Mathfunction.cpp">
-      <Filter>Engine\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\CreateResource\CreateResource.cpp">
-      <Filter>Engine\CreateResource</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Sprite\Sprite.cpp">
-      <Filter>Engine\Sprite</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\GraphicsPipeline\GraphicsPipeline.cpp">
-      <Filter>Engine\GraphicsPipeline</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Utility\StringUtility.cpp">
-      <Filter>Engine\Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Utility\ShaderCompile.cpp">
-      <Filter>Engine\Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Transform\WorldTransform.cpp">
-      <Filter>Engine\Transform</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Camera\Camera.cpp">
-      <Filter>Engine\ViewProjection</Filter>
-    </ClCompile>
-    <ClCompile Include="externals\imgui\imgui.cpp">
-      <Filter>External\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="externals\imgui\imgui_demo.cpp">
-      <Filter>External\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="externals\imgui\imgui_draw.cpp">
-      <Filter>External\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="externals\imgui\imgui_impl_dx12.cpp">
-      <Filter>External\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="externals\imgui\imgui_impl_win32.cpp">
-      <Filter>External\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="externals\imgui\imgui_tables.cpp">
-      <Filter>External\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="externals\imgui\imgui_widgets.cpp">
-      <Filter>External\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Utility\ImGuiManager\ImGuiManager.cpp">
-      <Filter>Engine\Utility\ImGuiManager</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\TextureManager\TextureManager.cpp">
-      <Filter>Engine\TextureManager</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Model\Model.cpp">
-      <Filter>Engine\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Model\Triangle.cpp">
-      <Filter>Engine\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Model\State\ModelSphere.cpp">
-      <Filter>Engine\Model\State</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Input\Input.cpp">
-      <Filter>Engine\Input</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Base\DX\DirectXCommon.cpp">
-      <Filter>Engine\Base\DirectX</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Base\WinApp\WinApp.cpp">
-      <Filter>Engine\Base\WinApp</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Model\State\ModelCube.cpp">
-      <Filter>Engine\Model\State</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\TextureManager\TextureReference\TextureReference.cpp">
-      <Filter>Engine\TextureManager\TextureReference</Filter>
-    </ClCompile>
-    <ClCompile Include="Project\Scene\IScene\IScene.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="Project\GameManager\GameManager.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Audio\Audio.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\ParticleSystem\ParticleSystem.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Engine.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="Project\GameObject\Player\Player.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="MainCamera.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="Project\GameObject\Enemy\Enemy.cpp">
-      <Filter>Project\GameObject\Enemy</Filter>
-    </ClCompile>
     <ClCompile Include="Project\GameObject\Player\Player.cpp" />
     <ClCompile Include="Project\GameObject\Enemy\Enemy.cpp" />
     <ClCompile Include="Engine\Audio\Audio.cpp" />
@@ -168,27 +65,6 @@
     <ClInclude Include="externals\imgui\imstb_textedit.h" />
     <ClInclude Include="externals\imgui\imstb_truetype.h" />
     <ClInclude Include="Engine\ParticleSystem\ParticleSystem.h" />
-    <ClInclude Include="Project\GameObject\Player\Player.h" />
-    <ClInclude Include="MainCamera.h" />
-    <ClInclude Include="Project\GameObject\Enemy\Enemy.h">
-      <Filter>Project\GameObject\Enemy</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="Engine\ShaderFile\Object3d.PS.hlsl">
-      <Filter>Engine\シェーダー</Filter>
-    </FxCompile>
-    <FxCompile Include="Engine\ShaderFile\Object3d.VS.hlsl">
-      <Filter>Engine\シェーダー</Filter>
-    </FxCompile>
-    <FxCompile Include="Engine\ShaderFile\Sprite2D.PS.hlsl">
-      <Filter>Engine\シェーダー</Filter>
-    </FxCompile>
-    <FxCompile Include="Engine\ShaderFile\Sprite2D.VS.hlsl">
-      <Filter>Engine\シェーダー</Filter>
-    </FxCompile>
-    <FxCompile Include="Engine\ShaderFile\Particle.VS.hlsl" />
-    <FxCompile Include="Engine\ShaderFile\Particle.PS.hlsl" />
     <ClInclude Include="Project\GameManager\GameManager.h" />
     <ClInclude Include="Project\Scene\GameScene\GameScene.h" />
     <ClInclude Include="Engine\GraphicsPipeline\GraphicsPipeline.h" />
