refs #2670 リングを実装した

--- a/CG2_DirectX.vcxproj
+++ b/CG2_DirectX.vcxproj
@@ -146,6 +146,7 @@ copy "$(WindowsSdkdir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Project\Scene\IScene\IScene.cpp" />
     <ClCompile Include="Project\Scene\SelectScene\SelectScene.cpp" />
     <ClCompile Include="Project\Scene\TitleScene\TitleScene.cpp" />
+    <ClCompile Include="Project\GameObject\Ring\Ring.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Project\GameObject\Player\Player.h" />
@@ -191,6 +192,7 @@ copy "$(WindowsSdkdir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Project\Scene\IScene\IScene.h" />
     <ClInclude Include="Project\Scene\SelectScene\SelectScene.h" />
     <ClInclude Include="Project\Scene\TitleScene\TitleScene.h" />
+    <ClInclude Include="Project\GameObject\Ring\Ring.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\ShaderFile\Object3d.hlsli">
