refs #2666 クリア演出仮完成

--- a/imgui.ini
+++ b/imgui.ini
@@ -41,12 +41,12 @@ Collapsed=0
 [Window][Enemy HP]
 Pos=803,29
 Size=469,436
-Collapsed=0
+Collapsed=1
 
 [Window][Attack]
-Pos=281,38
+Pos=94,9
 Size=130,67
-Collapsed=0
+Collapsed=1
 
 [Window][pos]
 Pos=60,155
@@ -64,9 +64,9 @@ Size=98,48
 Collapsed=0
 
 [Window][Camera]
-Pos=63,23
+Pos=987,65
 Size=287,88
-Collapsed=0
+Collapsed=1
 
 [Window][SceneChange]
 Pos=60,60
@@ -96,5 +96,10 @@ Collapsed=0
 [Window][rotate]
 Pos=359,24
 Size=291,73
-Collapsed=0
+Collapsed=1
+
+[Window][Light]
+Pos=902,295
+Size=336,146
+Collapsed=1
 
