手のひねり変更

--- a/imgui.ini
+++ b/imgui.ini
@@ -39,8 +39,8 @@ Size=121,48
 Collapsed=0
 
 [Window][Enemy HP]
-Pos=803,29
-Size=469,436
+Pos=782,-9
+Size=469,213
 Collapsed=0
 
 [Window][Attack]
