--- a/CG2_DirectX.vcxproj.filters
+++ b/CG2_DirectX.vcxproj.filters
@@ -50,6 +50,7 @@
     <ClCompile Include="Project\GameObject\Player\PlayerParticle.cpp" />
     <ClCompile Include="Project\Scene\GameOverScene\GameOverScene.cpp" />
     <ClCompile Include="Project\GameObject\Animation\Animation.cpp" />
+    <ClCompile Include="Engine\Framework\Framework.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Project\GameObject\Player\Player.h" />
@@ -97,6 +98,7 @@
     <ClInclude Include="Project\GameObject\Player\PlayerParticle.h" />
     <ClInclude Include="Project\Scene\GameOverScene\GameOverScene.h" />
     <ClInclude Include="Project\GameObject\Animation\Animation.h" />
+    <ClInclude Include="Engine\Framework\Framework.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\ShaderFile\Object3d.hlsli" />
