refs #2666 シーンをfactoryパターンにした

--- a/CG2_DirectX.vcxproj
+++ b/CG2_DirectX.vcxproj
@@ -110,6 +110,7 @@ copy "$(WindowsSdkdir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Framework\Framework.cpp" />
+    <ClCompile Include="Engine\SceneFactory\SceneFactory.cpp" />
     <ClCompile Include="Project\GameObject\Animation\Animation.cpp" />
     <ClCompile Include="Project\Scene\GameOverScene\GameOverScene.cpp" />
     <ClCompile Include="Project\GameObject\Player\Player.cpp" />
@@ -152,6 +153,8 @@ copy "$(WindowsSdkdir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Framework\Framework.h" />
+    <ClInclude Include="Engine\SceneFactory\AbstractSceneFactory.h" />
+    <ClInclude Include="Engine\SceneFactory\SceneFactory.h" />
     <ClInclude Include="Project\GameObject\Animation\Animation.h" />
     <ClInclude Include="Project\Scene\GameOverScene\GameOverScene.h" />
     <ClInclude Include="Project\GameObject\Player\Player.h" />
