refs#2555 ガード実装

--- a/imgui.ini
+++ b/imgui.ini
@@ -39,18 +39,18 @@ Size=121,48
 Collapsed=0
 
 [Window][Enemy HP]
-Pos=795,29
+Pos=779,9
 Size=477,436
-Collapsed=0
+Collapsed=1
 
 [Window][Attack]
-Pos=148,41
+Pos=1245,660
 Size=130,67
-Collapsed=0
+Collapsed=1
 
 [Window][pos]
-Pos=151,217
-Size=399,54
+Pos=18,245
+Size=312,54
 Collapsed=0
 
 [Window][RightAttack]
@@ -64,9 +64,9 @@ Size=98,48
 Collapsed=0
 
 [Window][Camera]
-Pos=102,120
+Pos=1245,660
 Size=287,88
-Collapsed=0
+Collapsed=1
 
 [Window][SceneChange]
 Pos=60,60
@@ -84,8 +84,8 @@ Size=155,108
 Collapsed=0
 
 [Window][particleFlag]
-Pos=42,282
-Size=131,65
+Pos=147,94
+Size=131,62
 Collapsed=0
 
 [Window][a]
@@ -94,7 +94,52 @@ Size=153,86
 Collapsed=0
 
 [Window][rotate]
-Pos=359,24
+Pos=1245,660
 Size=291,73
+Collapsed=1
+
+[Window][Stamina]
+Pos=1245,660
+Size=100,48
+Collapsed=1
+
+[Window][Attacku]
+Pos=5,34
+Size=121,65
+Collapsed=0
+
+[Window][Staminau]
+Pos=6,102
+Size=105,48
+Collapsed=0
+
+[Window][rotatue]
+Pos=8,155
+Size=226,77
+Collapsed=0
+
+[Window][Player Attack]
+Pos=15,35
+Size=125,65
+Collapsed=0
+
+[Window][Player Stamina]
+Pos=18,107
+Size=122,48
+Collapsed=0
+
+[Window][Player rotate]
+Pos=16,161
+Size=373,78
+Collapsed=0
+
+[Window][Ring pos]
+Pos=17,250
+Size=310,54
+Collapsed=0
+
+[Window][Player Gard]
+Pos=148,35
+Size=102,55
 Collapsed=0
 
