refs #2767 敵の攻撃判定

--- a/imgui.ini
+++ b/imgui.ini
@@ -41,7 +41,7 @@ Collapsed=0
 [Window][Enemy HP]
 Pos=779,9
 Size=477,436
-Collapsed=1
+Collapsed=0
 
 [Window][Attack]
 Pos=1245,660
@@ -84,8 +84,8 @@ Size=155,108
 Collapsed=0
 
 [Window][particleFlag]
-Pos=147,94
-Size=131,62
+Pos=8,215
+Size=131,32
 Collapsed=0
 
 [Window][a]
@@ -120,7 +120,7 @@ Collapsed=0
 
 [Window][Player Attack]
 Pos=15,35
-Size=125,65
+Size=198,202
 Collapsed=0
 
 [Window][Player Stamina]
@@ -134,12 +134,17 @@ Size=373,78
 Collapsed=0
 
 [Window][Ring pos]
-Pos=17,250
+Pos=7,256
 Size=310,54
 Collapsed=0
 
 [Window][Player Gard]
 Pos=148,35
 Size=102,55
+Collapsed=0
+
+[Window][Player]
+Pos=4,35
+Size=388,166
 Collapsed=0
 
