--- a/imgui.ini
+++ b/imgui.ini
@@ -116,10 +116,10 @@ Collapsed=0
 [Window][Player Gard]
 Pos=148,35
 Size=102,55
+Collapsed=0
 
 [Window][Light]
 Pos=902,295
 Size=336,146
-
 Collapsed=0
 
