--- a/imgui.ini
+++ b/imgui.ini
@@ -46,7 +46,7 @@ Collapsed=1
 [Window][Attack]
 Pos=-2,6
 Size=240,164
-Collapsed=0
+Collapsed=1
 
 [Window][pos]
 Pos=18,245
@@ -64,9 +64,9 @@ Size=98,48
 Collapsed=0
 
 [Window][Camera]
-Pos=-1,222
-Size=287,88
-Collapsed=0
+Pos=0,228
+Size=292,88
+Collapsed=1
 
 [Window][SceneChange]
 Pos=60,60
@@ -111,7 +111,7 @@ Collapsed=0
 [Window][Ring pos]
 Pos=-5,172
 Size=310,54
-Collapsed=0
+Collapsed=1
 
 [Window][Player Gard]
 Pos=148,35
@@ -119,13 +119,17 @@ Size=102,55
 Collapsed=0
 
 [Window][Light]
-Pos=902,295
-Size=336,146
-
+Pos=341,593
+Size=669,146
 Collapsed=0
 
 [Window][Player]
 Pos=4,35
 Size=388,166
 Collapsed=0
+
+[Window][Seki pos]
+Pos=1,118
+Size=306,54
+Collapsed=1
 
