refs #2798 一回途中で保存

--- a/imgui.ini
+++ b/imgui.ini
@@ -119,9 +119,9 @@ Size=102,55
 Collapsed=0
 
 [Window][Light]
-Pos=341,593
+Pos=648,37
 Size=669,146
-Collapsed=0
+Collapsed=1
 
 [Window][Player]
 Pos=4,35
@@ -131,5 +131,10 @@ Collapsed=0
 [Window][Seki pos]
 Pos=60,60
 Size=61,54
+Collapsed=0
+
+[Window][q]
+Pos=223,49
+Size=143,66
 Collapsed=0
 
