--- a/imgui.ini
+++ b/imgui.ini
@@ -129,12 +129,17 @@ Size=388,166
 Collapsed=0
 
 [Window][Seki pos]
-Pos=60,60
-Size=61,54
+Pos=249,73
+Size=161,54
 Collapsed=0
 
 [Window][q]
 Pos=223,49
 Size=143,66
+Collapsed=0
+
+[Window][Lighting]
+Pos=24,121
+Size=277,294
 Collapsed=0
 
